Revamped expression evaluation and update strategies
Expressions are injected into the <script> as native javascript functions
Riot tmpl is modified to call the expressions (functions) from the appropriate tags
Loop contexts are accessed via a _item argument in the compiled expression function, which is provided when tmpl calls it
Since updates have long been replaced by self .render, in response to stream changes, we default shouldUpdate to false
Except:
case 1: First update aka mount
case 2: The update is triggered by a self .render (tracked by self .renders)
case 3: Is in loop, and parent is updating (parent .shouldUpdate)
case 4: Is in virtual, and parent wants to update (is this case correct??)
case 5: The tag has yield, so parent updates might flow to this tag
The shouldUpdate strategy push/pull can be set in self.update_strategy
self.render s triggered before mount are simply ignored and referred to the mount render
superflous self.render s are conflated
Misc:
dynamic-load-item updated handler to update n and item is now only attached after fire update, since first mount triggers both initialization and this
gave bigger match catalog in mock api

--- a/src/app/body.ejs
+++ b/src/app/body.ejs
@@ -110,8 +110,11 @@
 													cycle__from: my ('page-cycle') (new_page .id)
 												}) [0]);
 								//HACK: riot data-is bug, not firing mount
-								if (self .isMounted)
+								if (self .isMounted) {
+									self .renders .push ('now');
 									self .update ();
+									self .renders .pop ();
+								}
 							}
 							
 							var cycle_label = my ('page-cycle') (curr .id);
